setup of section 23

--- a/html&css/webdev-Colt/23_NewJavaScriptFeatures.html
+++ b/html&css/webdev-Colt/23_NewJavaScriptFeatures.html
@@ -21,7 +21,14 @@
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul id="tocList">
-                    <li><a href="#"></a></li>
+                    <li><a href="#defp">Default Params</a></li>
+                    <li><a href="#sifc">Spread in Function Calls</a></li>
+                    <li><a href="#swal">Spread with Array Literals</a></li>
+                    <li><a href="#swo">Spread with Objects</a></li>
+                    <li><a href="#rp">Rest Params</a></li>
+                    <li><a href="#da">Destructing Arrays</a></li>
+                    <li><a href="#do">Destructing Objects</a></li>
+                    <li><a href="#desp">Destructing Params</a></li>
                 </ul>
 
                 <section id="developer">
@@ -42,21 +49,101 @@
             </section>
 
             <section id="notes">
-                article>h2#{}+.example>ul>li^^p
+                <article>
+                    <h2 id="defp">Default Params</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
 
-                article>h2#{}+.example>ul>li^^p
+                    </p>
+                </article>
 
-                article>h2#{}+.example>ul>li^^p
+                <article>
+                    <h2 id="sifc">Spread in Function Calls</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
 
-                article>h2#{}+.example>ul>li^^p
+                    </p>
+                </article>
 
-                article>h2#{}+.example>ul>li^^p
+                <article>
+                    <h2 id="swal">Spread with Array Literals</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
 
-                article>h2#{}+.example>ul>li^^p
+                    </p>
+                </article>
 
-                article>h2#{}+.example>ul>li^^p
+                <article>
+                    <h2 id="swo">Spread with Objects</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
 
-                article>h2#{}+.example>ul>li^^p
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="rp">Rest Params</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="da">Destructing Arrays</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="do">Destructing Objects</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
+
+                <article>
+                    <h2 id="desp">Desctructing Params</h2>
+                    <div class="example">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <p>
+
+                    </p>
+                </article>
             </section>
         </main>
 
