did something in the js practice file???

--- a/html&css/webdev-Colt/javascriptPractice.html
+++ b/html&css/webdev-Colt/javascriptPractice.html
@@ -17,7 +17,15 @@
     </header>
     
     <main>
+        <h2>Things to practice or revise.</h2>
+        <section id="practiseList">
+            <ul>
+                <li></li>
+            </ul>
+        </section>
 
     </main>
+
+    <script src="javascriptPractice.js"></script>
 </body>
 </html>
