did something, cant remember what

--- a/html&css/webdev-Colt/24_IntroducingTheWorldOfDOM.html
+++ b/html&css/webdev-Colt/24_IntroducingTheWorldOfDOM.html
@@ -19,19 +19,23 @@
         <section id="toc">
             <h2>Table of Contents</h2>
             <ul id="tocList">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#itd">Introducing the DOM</a></li>
+                <li><a href="#tdo">The Document Object</a></li>
+                <li>
+                    <a href="#gebi">getElementById</a>
+                    <ul>
+                        <li><a href="#getbtncn">getElementsByTagName & className</a></li>
+                    </ul>
+                </li>
+                <li><a href="#qsqsa">querySelector & querySelectorAll</a></li>
+                <li><a href="#ihtcit">innerHTML, textContent & innerText</a></li>
+                <li><a href="#a">Attributes</a></li>
+                <li><a href="#cs">Changing Styles</a></li>
+                <li><a href="#cl">ClassList</a></li>
+                <li><a href="#tpcs">Traversing Parent/Child/Sibling</a></li>
+                <li><a href="#aac">Append & AppendChild</a></li>
+                <li><a href="#rcr">removeChild & remove</a></li>
+                <li><a href="#psd">Pokemon Sprites Demo</a></li>
             </ul>
 
             <section id="developer">
@@ -59,7 +63,9 @@
                         <li></li>
                     </ul>
                 </div>
-                <p></p>
+                <p>
+
+                </p>
             </article>
 
             <article>
@@ -85,7 +91,7 @@
 
                 </p>
 
-                <h3 id="getebtncn">getElementsByTagName & className</h3>
+                <h3 id="getbtncn">getElementsByTagName & className</h3>
                 <div class="example">
                     <ul>
                         <li></li>
@@ -200,7 +206,7 @@
                     </ul>
                 </div>
                 <p>
-                    
+
                 </p>
             </article>
         </section>
