--- a/html&css/webdev-Colt/javascriptPractice.html
+++ b/html&css/webdev-Colt/javascriptPractice.html
@@ -12,7 +12,7 @@
     </head>
 <body>
     <header>
-        <h1>JavaScript Practice</h1>
+        <h1>JavaScript</h1>
         <h2>Still in progress...</h2>
     </header>
     
