--- a/html&css/webdev-Colt/javascriptPractice.html
+++ b/html&css/webdev-Colt/javascriptPractice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +9,151 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="jsp.css">
+        <link rel="stylesheet" href="javascriptPractice.css">
     </head>
-<body>
-    <header>
-        <h1>JavaScript</h1>
-        <h2>Still in progress...</h2>
-    </header>
-    
-    <main>
-        <h2>Things to practice or revise.</h2>
-        <section id="practiseList">
-            <ul>
-                <li></li>
-            </ul>
-        </section>
 
-    </main>
+    <body>
+        <header>
+            <h1>JavaScript</h1>
+            <h2>Still in progress...</h2>
+        </header>
 
-    <script src="javascriptPractice.js"></script>
-</body>
+        <main>
+            <h2>Things to practice or revise.</h2>
+            <section id="practiceList">
+                <div class="list">
+                    <ul>
+                        <li>String Properties & Methods</li>
+                        <li>Random Number & Math Object</li>
+                        <li>Console, Prompt, Alert, parseInt</li>
+                        <li>If Statements</li>
+                        <li>
+                            Array
+                            <ul>
+                                <li>Array Access</li>
+                                <li>Array Methods</li>
+                                <li>Array Callback Methods</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            Object Literals
+                            <ul>
+                                <li>Access Data from Object Literal</li>
+                                <li>Modifying Objects</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            Loops & Nested Loops
+                            <ul>
+                                <li>For Loop</li>
+                                <li>For of Loop</li>
+                                <li>For in Loop</li>
+                            </ul>
+                            <ul>
+                                <li>While loop</li>
+                                <li>break; Keyword</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            Functions & Arrow Functions
+                            <ul>
+                                <li>Defining a Function</li>
+                                <li>Function Expression</li>
+                                <li>
+                                    Arrow Functions
+                                    <ul>
+                                        <li>Explicit Returns with Parenthesis</li>
+                                        <li>Explicit Returns without Parenthesis</li>
+                                        <li>one Liners</li>
+                                    </ul>
+                                </li>
+                                <li>Functions with Arguments</li>
+                                <li>
+                                    Factory Functions
+                                    <ul>
+                                        <li>return Random Function</li>
+                                        <li>make a function</li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            Defining Methods
+                            <ul>
+                                <li>The keyword 'this'</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>try & catch</li>
+                        <br>
+                        <li>setTimeout & setInterval</li>
+                        <br>
+                        <li>Default Params</li>
+                        <br>
+                        <li>
+                            Spread
+                            <ul>
+                                <li>spread in functions</li>
+                                <li>spread in arrays</li>
+                                <li>spread in objects</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>Rest Params</li>
+                        <br>
+                        <li>
+                            Destructing
+                            <ul>
+                                <li>Arrays</li>
+                                <li>Objects</li>
+                                <li>Params</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li>
+                            The world of Dom
+                            <ul>
+                                <li>
+                                    Selecting an Element
+                                    <ul>
+                                        <li>getElementById</li>
+                                        <li>getElementsByTagName</li>
+                                        <li>getElementsByClassName</li>
+                                    </ul>
+                                    <ul>
+                                        <li>querySelector</li>
+                                        <li>querySelectorAll</li>
+                                    </ul>
+                                </li>
+                                <li>innerText</li>
+                                <li>textContent</li>
+                                <li>innerHTML</li>
+                                <li>Attributes</li>
+                                <li>style</li>
+                                <li>classList</li>
+                                <li>Parent, Child & Sibling</li>
+                                <li>Appending</li>
+                                <li>Removing</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+        </main>
+        <footer>
+
+        </footer>
+
+        <script src="javascriptPractice.js"></script>
+    </body>
+
 </html>
