--- a/html&css/webdev-Colt/javascriptPractice.html
+++ b/html&css/webdev-Colt/javascriptPractice.html
@@ -23,10 +23,21 @@
             <section id="practiceList">
                 <div class="list">
                     <ul>
-                        <li>String Properties & Methods</li>
+                        <li>
+                            String Properties & Methods
+                            <ul>
+                                <li>Escape Sequences</li>
+                            </ul>
+                        </li>
                         <li>Random Number & Math Object</li>
                         <li>Console, Prompt, Alert, parseInt</li>
-                        <li>If Statements</li>
+                        <li>
+                            If Statements
+                            <ul>
+                                <li>Switch Statement</li>
+                                <li>Ternary Statement</li>
+                            </ul>
+                        </li>
                         <li>
                             Array
                             <ul>
