finish JavaScript Practice

--- a/html&css/webdev-Colt/javascriptPractice.html
+++ b/html&css/webdev-Colt/javascriptPractice.html
@@ -151,6 +151,7 @@
                                 <li>style</li>
                                 <li>classList</li>
                                 <li>Parent, Child & Sibling</li>
+                                <li>createElement</li>
                                 <li>Appending</li>
                                 <li>Removing</li>
                             </ul>
