More practice with JavaScript finished

--- a/html&css/webdev-Colt/25_TheMissingPieceDomEvents.html
+++ b/html&css/webdev-Colt/25_TheMissingPieceDomEvents.html
@@ -425,8 +425,14 @@
 
                 <article>
                     <h3 id="tda">Todo App</h3>
-                    <div class="todoApp">
+                    <div id="todoApp">
+                        <ul id="todoContainer">
 
+                        </ul>
+                        <form action="/nowhere" id="todoForm">
+                            <input type="text" name="todoInput" id="todoInput" placeholder="Enter a ToDo">
+                            <button id="todoBtn">Submit</button>
+                        </form>
                     </div>
                 </article>
 
@@ -530,6 +536,9 @@
             </section>
 
         </main>
+        <footer>
+            
+        </footer>
 
         <script src="script25.js"></script>
     </body>
