--- a/html&css/webdev-Colt/23_NewJavaScriptFeatures.html
+++ b/html&css/webdev-Colt/23_NewJavaScriptFeatures.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../docStyles.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -319,7 +319,7 @@
             </section>
         </main>
 
-        <script src="script23.js"> </script>
+        <script src="app23.js"> </script>
     </body>
 
 </html>
