--- a/html&css/webdev-Colt/projectsFolder/50DayProject/day1/index.html
+++ b/html&css/webdev-Colt/projectsFolder/50DayProject/day1/index.html
@@ -11,7 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300;8..144,400;8..144,700&display=swap"
             rel="stylesheet">
         <title>Expanding Slides</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
+        <script src="app.js"></script>
     </body>
 
 </html>
