--- a/html&css/webdev-Colt/projectsFolder/50DayProject/indexCopy.html
+++ b/html&css/webdev-Colt/projectsFolder/50DayProject/indexCopy.html
@@ -11,13 +11,13 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300;8..144,400;8..144,700&display=swap"
             rel="stylesheet">
         <title>Project Starter</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>projectStarter</h1>
 
-        <script src="script.js"></script>
+        <script src="app.js"></script>
     </body>
 
 </html>
