--- a/html&css/webdev-Colt/projectsFolder/javascriptPractice/index.html
+++ b/html&css/webdev-Colt/projectsFolder/javascriptPractice/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="javascriptPractice.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -165,7 +165,7 @@
 
         </footer>
 
-        <script src="javascriptPractice.js"></script>
+        <script src="app.js"></script>
     </body>
 
 </html>
