--- a/html&css/webdev-Colt/projectsFolder/randomProjects/pokeDex/index.html
+++ b/html&css/webdev-Colt/projectsFolder/randomProjects/pokeDex/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="pokeDex.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -23,7 +23,7 @@
             </div>
         </main>
 
-        <script src="pokeDex.js"></script>
+        <script src="app.js"></script>
     </body>
 
 </html>
