--- a/html&css/webdevAdv-Colt/01_CourseIntroduction.html
+++ b/html&css/webdevAdv-Colt/01_CourseIntroduction.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../docStyles.css">
+        <link rel="stylesheet" href="../style.css">
         <title>Course Orientation</title>
     </head>
 
@@ -54,7 +54,7 @@
             </section>
         </main>
         <footer>
-            
+
         </footer>
     </body>
 
