finish pingPongCodeAlong and refactored

--- a/html&css/webdev-Colt/projectsFolder/randomProjects/pingpongCodeAlong/index.html
+++ b/html&css/webdev-Colt/projectsFolder/randomProjects/pingpongCodeAlong/index.html
@@ -24,23 +24,19 @@
                 <div id="display">
                     <div id="scoreCards">
                         <div class="cards">
-                            <h2 id="playerOneScore" class="playerScores">0</h2>
-                            <span id="player1Name" class="playerNames">Player 1</span>
+                            <h2 id="p1AddScore" class="pScores">0</h2>
+                            <span id="p1Name" class="pNames">Player 1</span>
                         </div>
                         <div class="cards">
-                            <h2 id="playerTwoScore" class="playerScores">0</h2>
-                            <span id="player2Name" class="playerNames">Player 2</span>
+                            <h2 id="p2AddScore" class="pScores">0</h2>
+                            <span id="p2Name" class="pNames">Player 2</span>
                         </div>
                     </div>
-                    <div id="playerNames">
-
-
-                    </div>
-                    <h2 id="instructionHeading">- Press the buttons below to play -</h2>
+                    <h2 id="iHeading">- Press the buttons below to play -</h2>
                 </div>
-                <div class="buttons">
+                <div id="buttons">
                     <div class="gameButtons">
-                        <button id="player1Button">+1 Player One</button>
+                        <button id="p1Button">+1 Player One</button>
                         <select name="" id="playTo">
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -48,7 +44,7 @@
                             <option value="6">6</option>
                             <option value="7">7</option>
                         </select>
-                        <button id="player2Button">+1 Player Two</button>
+                        <button id="p2Button">+1 Player Two</button>
                     </div>
                     <div class="resetButton">
                         <button id="resetButton">Reset</button>
